k8s/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app
  namespace: kiii
spec:
  selector:
    app: backend
  ports:
    - port: 9090
      targetPort: 9090
