k8s/backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment
  namespace: kiii
  labels:
    app: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: isidoraaleksicc/kiii-backend:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 9090
---
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: kiii
spec:
  selector:
    app: backend
  ports:
    - protocol: TCP
      port: 9090
      targetPort: 9090
  type: ClusterIP
