k8s/postgres.yaml

apiVersion: v1
kind: Service
metadata:
  name: postgres-db
  namespace: kiii
spec:
  ports:
    - port: 5432
      targetPort: 5432
  selector:
    app: postgres
  clusterIP: None   # so StatefulSet dobiva stable DNS

---

apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: postgres
  namespace: kiii
spec:
  serviceName: postgres-db
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
        - name: postgres
          image: postgres:17.4
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: postgres-storage
              mountPath: /var/lib/postgresql/data
  volumeClaimTemplates:
    - metadata:
        name: postgres-storage
      spec:
        accessModes: [ "ReadWriteOnce" ]
        resources:
          requests:
            storage: 1Gi
